--- a/assets/styles/src/tailwind.css
+++ b/assets/styles/src/tailwind.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 /* imported fonts will be placed right below */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+.font-roboto {
+  font-family: 'Roboto', sans-serif;
+}
+
+body, html {
+  font-family: 'Roboto', sans-serif;
+}
 
 @layer base {
     /* to modify base styles of tailwind, if needed
@@ -81,3 +90,15 @@
 
 
 /* ------------ custom css if needed -------------- */
+.text-blue-primary {
+  color: #5459b7;
+}
+.bg-blue-primary {
+  background-color: #5459b7;
+}
+.text-black-secondary {
+  color: #1a1a1a;
+}
+.text-gray-primary {
+  color: #797b81;
+}
