--- a/assets/styles/src/tailwind.css
+++ b/assets/styles/src/tailwind.css
@@ -3,25 +3,25 @@
 @tailwind utilities;
 
 /* imported fonts will be placed right below */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap')
 
-.font-roboto {
-  font-family: 'Roboto', sans-serif;
+.font-rubik {
+  font-family: 'Rubik', sans-serif;
 }
 
 body, html {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
 
 @layer base {
-    /* to modify base styles of tailwind, if needed
+  /* to modify base styles of tailwind, if needed
      h1 {
         @apply text-2xl
     } */
 }
 
 @layer components {
-    /* to add custom components 
+  /* to add custom components 
   .btn {
     @apply text-sm font-bold px-2 rounded-md py-1 mt-4;
   }
@@ -34,7 +34,7 @@ body, html {
 }
 
 @layer utilities {
-    /* we can add custom utility class in this layer 
+  /* we can add custom utility class in this layer 
     .space-100 {
       margin: 400px;
     } */
@@ -49,14 +49,12 @@ body, html {
    } */
 }
 
-/* reset deafult styling behavour of browser */ 
+/* reset deafult styling behavour of browser */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-
 
 /* ----------- for highly customized responsiveness ------------ */
 .main-container {
@@ -88,13 +86,12 @@ body, html {
   }
 }
 
-
 /* ------------ custom css if needed -------------- */
 .text-blue-primary {
-  color: #5459b7;
+  color: hsl(238, 40%, 52%);
 }
 .bg-blue-primary {
-  background-color: #5459b7;
+  background-color: hsl(238, 40%, 52%);
 }
 .text-black-secondary {
   color: #1a1a1a;
