--- a/assets/styles/output/main.css
+++ b/assets/styles/output/main.css
@@ -580,11 +580,6 @@ video {
   grid-column: span 11 / span 11;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -614,16 +609,16 @@ video {
   margin-top: 1rem;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
 }
 
 .grid {
   display: grid;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .h-7 {
@@ -640,18 +635,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-0 {
-  height: 0px;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-20 {
-  height: 5rem;
 }
 
 .w-3\/5 {
@@ -692,10 +675,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.items-start {
-  align-items: flex-start;
 }
 
 .items-center {
@@ -758,13 +737,17 @@ video {
   border-radius: 0.375rem;
 }
 
-.border {
-  border-width: 1px;
+.border-2 {
+  border-width: 2px;
 }
 
-.border-gray-200 {
+.border-gray-100 {
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
+.border-opacity-90 {
+  --tw-border-opacity: 0.9;
 }
 
 .bg-\[\#f5f6fa\] {
@@ -825,8 +808,8 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.ps-10 {
-  padding-inline-start: 2.5rem;
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .text-sm {
@@ -899,13 +882,6 @@ body, html {
 }
 
 /* to add variants like hover, focus or such things on our custom classes, we must keep them in the specific variant, either it won't work */
-
-@variants focus, hover {
-  /* .rotate-40 {
-     transform: skew(0deg);
-     transition: all .2s;
-   } */
-}
 
 /* reset deafult styling behavour of browser */
 
