--- a/assets/styles/output/main.css
+++ b/assets/styles/output/main.css
@@ -645,10 +645,6 @@ video {
   width: 80%;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
-}
-
 .w-7 {
   width: 1.75rem;
 }
@@ -743,11 +739,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-gray-100 {
@@ -959,6 +950,10 @@ body, html {
   color: #797b81;
 }
 
+.vertical-divider {
+  border-left: 2px solid hsl(223, 19%, 93%);
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -970,6 +965,10 @@ body, html {
 }
 
 @media (min-width: 1024px) {
+  .lg\:w-11\/12 {
+    width: 91.666667%;
+  }
+
   .lg\:w-3\/6 {
     width: 50%;
   }
@@ -979,4 +978,3 @@ body, html {
     padding-right: 0px;
   }
 }
-
